# alturia-firmware

./: .gitignore  .gitmodules  .uncrustify.cfg  CMakeLists.txt  Kconfig  Kconfig.loglevel  README.md  iterables.ld  plot.py  prj.conf
.github/workflows/: build.yml
boards/: alturia_v1_2.conf  rpi_pico.conf  rpi_pico.overlay
boards/alturia/alturia_v1_2/: Kconfig.alturia_v1_2  alturia_v1_2.dts  alturia_v1_2_defconfig  board.cmake  board.yml
boards/alturia/alturia_v1_2/support/: openocd.cfg
boards/arm/alturia/: Kconfig.board  Kconfig.defconfig  alturia.dts  alturia.yaml  alturia_defconfig  board.cmake  pinmux.c
boards/arm/alturia_v1_2/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  alturia_v1_2.dts  alturia_v1_2.yaml  alturia_v1_2_defconfig  flash_hold_pin_setup.c  pinmux.c
boards/extensions/alturia_v1_2/: alturia_v1_2.conf
boards/extensions/rpi_pico/: rpi_pico.overlay
design/: altitude_kalman_filter.py  attitude_estimation.py  codegen.py  constant_altitude_kalman_filter.py  control.py  gen_code.py  gen_code_linear_kalman_filter.py  mahony_filter.py  mahony_simulation.py  mahony_simulation_ahrs.py  mekf.py  simulate_attitude_determination.py  simulation.py  simulation_alturia.py  sympy_helpers.py  transformations.py  vertical_dynamics_kalman_filter.py  zero_velocity_filter.py
design/fligthdata/altimax/: .~lock.ct_4.ods#  bluefalcon_bc125_28_08_11.ods  bluefalcon_bc125_28_08_11.xls  bluefalcon_bc125_srb_p2.ods  bluefalcon_bc125_srb_p2.xls  bluefalcon_bc125sb_29_01_12.ods  bluefalcon_bc125sb_29_01_12.xls  ct_1.ods  ct_1.xls  ct_2.ods  ct_2.xls  ct_3.ods  ct_3.xls  ct_4.ods  ct_4.xls  tethys.ods  tethys.xls
design/fligthdata/alturia/: 240seconds_still.csv  constant.csv  flickflack.csv
dts/bindings/: beeper.yaml  pyros.yaml  rgb_pwm_led.yaml  servos.yaml
lib/cmsis/CMSIS/RTOS2/RTX/: RTX5.scvd
lib/cmsis/CMSIS/RTOS2/RTX/Examples/Blinky/: Blinky.uvoptx  Blinky.uvprojx
lib/cmsis/CMSIS/RTOS2/RTX/Examples/MemPool/: MemPool.uvoptx  MemPool.uvprojx
lib/cmsis/CMSIS/RTOS2/RTX/Examples/Migration/: Blinky.uvoptx  Blinky.uvprojx
lib/cmsis/CMSIS/RTOS2/RTX/Examples/MsgQueue/: MsqQueue.uvoptx  MsqQueue.uvprojx
lib/cmsis/CMSIS/Utilities/: PACK.xsd
lib/cmsis/Device/ARM/ARMCM0/Include/: system_ARMCM0.h
lib/cmsis/Device/ARM/ARMCM0/Source/: startup_ARMCM0.c
lib/cmsis/Device/ARM/ARMCM0/Source/ARM/: ARMCM0_ac5.sct  ARMCM0_ac6.sct  startup_ARMCM0.s
lib/cmsis/Device/ARM/ARMCM0/Source/GCC/: startup_ARMCM0.S
lib/cmsis/Device/ARM/ARMCM0/Source/IAR/: startup_ARMCM0.s
lib/cmsis/Device/ARM/ARMCM0plus/Include/: system_ARMCM0plus.h
lib/cmsis/Device/ARM/ARMCM0plus/Source/: startup_ARMCM0plus.c  system_ARMCM0plus.c
lib/cmsis/Device/ARM/ARMCM0plus/Source/ARM/: ARMCM0plus_ac6.sct  (+1 more)
lib/cmsis/Device/ARM/ARMCM1/Include/: system_ARMCM1.h
lib/cmsis/Device/ARM/ARMCM1/Source/: startup_ARMCM1.c  system_ARMCM1.c
lib/cmsis/Device/ARM/ARMCM23/Include/: system_ARMCM23.h
lib/cmsis/Device/ARM/ARMCM23/Source/: startup_ARMCM23.c  system_ARMCM23.c
lib/cmsis/Device/ARM/ARMCM3/Include/: ARMCM3.h  system_ARMCM3.h
lib/cmsis/Device/ARM/ARMCM3/Source/: startup_ARMCM3.c  system_ARMCM3.c
lib/cmsis/Device/ARM/ARMCM33/Include/: system_ARMCM33.h
lib/cmsis/Device/ARM/ARMCM33/Source/: startup_ARMCM33.c  system_ARMCM33.c
lib/cmsis/Device/ARM/ARMCM35P/Include/: system_ARMCM35P.h
lib/cmsis/Device/ARM/ARMCM35P/Source/: startup_ARMCM35P.c  system_ARMCM35P.c
lib/cmsis/Device/ARM/ARMCM4/Include/: system_ARMCM4.h
lib/cmsis/Device/ARM/ARMCM4/Source/: startup_ARMCM4.c
lib/cmsis/Device/ARM/ARMCM7/Include/: ARMCM7.h  ARMCM7_DP.h  ARMCM7_SP.h  system_ARMCM7.h
lib/cmsis/Device/ARM/ARMCM7/Source/: startup_ARMCM7.c  system_ARMCM7.c
lib/cmsis/Device/ARM/ARMSC000/Include/: ARMSC000.h  system_ARMSC000.h
lib/cmsis/Device/ARM/ARMSC000/Source/: startup_ARMSC000.c  system_ARMSC000.c
lib/cmsis/Device/ARM/ARMSC300/Include/: ARMSC300.h  system_ARMSC300.h
lib/cmsis/Device/ARM/ARMSC300/Source/: startup_ARMSC300.c  system_ARMSC300.c
lib/cmsis/Device/ARM/ARMv81MML/Include/: ARMv81MML_DSP_DP_MVE_FP.h  system_ARMv81MML.h
lib/cmsis/Device/ARM/ARMv81MML/Source/: startup_ARMv81MML.c  system_ARMv81MML.c
lib/cmsis/Device/ARM/ARMv8MBL/Include/: system_ARMv8MBL.h
lib/cmsis/Device/ARM/ARMv8MBL/Source/: startup_ARMv8MBL.c  system_ARMv8MBL.c
lib/cmsis/Device/ARM/ARMv8MML/Include/: ARMv8MML.h  ARMv8MML_DP.h  ARMv8MML_DSP.h  ARMv8MML_DSP_DP.h  ARMv8MML_DSP_SP.h  ARMv8MML_SP.h  system_ARMv8MML.h
lib/cmsis/Device/ARM/ARMv8MML/Source/: startup_ARMv8MML.c  system_ARMv8MML.c
renode/: alturia_v1_2.repl  alturia_v1_2_devices.repl  alturia_v1_2_simulation.repl  stm32f4.repl  xmlrpc_sensors.py
renode/devices/: BMI088_Accelerometer.cs  BMI088_Gyroscope.cs  MS5607.cs  Micron_MT25QL.cs  Pyros.cs
renode/helper/: SpiCsController.cs
scripts/: mount.sh
src/: actions.c  actions.h  alturia.c  alturia.h  atmosphere.c  atmosphere.h  beeper.c  beeper.h  conditions.c  conditions.h  config.c  config.h  config_shell.c  config_yaml.c  config_yaml.h  configuration.c  configuration.h  constants.h  daq.c  daq.h  daq_sensor.c  datalogger.c  datalogger.h  edge_detector.c  edge_detector.h  events.c  events.h  events2.c  events2.h  eventtimer.c  eventtimer.h  flightcfg_parser.h  flightconfig_parser.c  flightctrl.h  flightstate.c  flightstate.h  generic.c  generic.h  is_atmosphere.c  is_atmosphere.h  (+26 more)
src/execution_engine/: actions.h  events.h  events.md  execution_context.h  execution_engine.c  execution_engine.h  generic.h  variable.h
src/filter/: attitude_estimation.c  attitude_estimation.h  kalman_filter.c  kalman_filter.h  pt1.c  pt1.h
src/lua_execution_engine/: lua_alturialib.c  lua_alturialib.h  lua_eventlib.c  lua_eventlib.h  lua_execution_engine.c  lua_execution_engine.h  lua_ledlib.c  lua_ledlib.h  lua_pyrolib.c  lua_pyrolib.h  lua_servolib.c  lua_servolib.h  lua_signallib.c  lua_signallib.h  lua_timerlib.c  lua_timerlib.h
src/rocket/: beeper_logic.c  beeper_logic.h  data_logging.c  data_logging.h  flightctrl.c  flightctrl.h  flightstate.c  flightstate.h  signal_processing.c  signal_processing.h
(+66 files in other folders)
